styles as module developed and integrated

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,33 @@ a {
     background: black;
   }
 }
+
+h1 {
+  font-size: 1.5rem;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.root {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.padding {
+  padding: 1rem;
+}
