--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,7 @@ h1 {
 }
 a {
   text-decoration: underline;
-  color: rgb(55, 55, 244);
+  color: #77adeb;
   font-size: 20;
   font-weight: bold;
 }
