--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,19 @@ footer {
   border-top: 1px solid #eaeaea;
 }
 
+table {
+  border: 1px solid #333;
+}
+
+thead,
+tfoot {
+  background-color: #333;
+  color: #fff;
+}
+
+td {
+  padding: 0.5rem;
+}
 * {
   box-sizing: border-box;
 }
@@ -34,6 +47,14 @@ footer {
     color: white;
     background: black;
   }
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
 
 h1 {
