--- a/pages/home/Home.module.css
+++ b/pages/home/Home.module.css
@@ -6,6 +6,7 @@
   max-width: 30rem;
   margin: 1.5rem;
   height: fit-content;
+  background: #ffffffc4;
 }
 
 @media only screen and (max-width: 300px) {
