--- a/pages/home/Home.module.css
+++ b/pages/home/Home.module.css
@@ -1,16 +1,5 @@
-.card {
-  box-shadow: #64646f33 0rem 0rem 3rem 0rem;
-  border: 1px solid #9a9a9a33;
-  border-radius: 0.7rem;
+.root {
   padding: 2rem;
-  max-width: 30rem;
-  margin: 1.5rem;
-  height: fit-content;
-  background: #ffffffc4;
-}
 
-@media only screen and (max-width: 300px) {
-  .card {
-    padding: 1rem;
-  }
+  height: fit-content;
 }
