--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ body {
   font-size: 15px;
   line-height: 1.7;
   color: #1f2029;
-  background-color: #fff;
+  background-color: var(--white);
   overflow: hidden;
   background: url('https://assets.codepen.io/1462889/back-page.svg');
   background-position: center;
@@ -29,7 +29,7 @@ table {
 thead,
 tfoot {
   background-color: #333;
-  color: #fff;
+  color: var(--white);
 }
 
 td {
@@ -49,7 +49,7 @@ tr:nth-of-type(even) {
     color-scheme: dark;
   }
   body {
-    color: white;
+    color: var(--white);
     background: black;
   }
 }
